fixed help/logout buttons being behind a div

--- a/src/main/java/edu/emory/clir/realqa/web/realqawebapp/realqa/static/realqa/css/style.css
+++ b/src/main/java/edu/emory/clir/realqa/web/realqawebapp/realqa/static/realqa/css/style.css
@@ -45,6 +45,7 @@ body {
 	top: 0px;
 	margin: auto;
 	position: absolute;
+	z-index: 1;
 }
 
 #help {
@@ -60,6 +61,7 @@ body {
 	margin: auto;
 	position: absolute;
 	left: 65px;
+	z-index: 1;
 }
 	
 #ask{
